# furiosa-apps

./: README.md  pyproject.toml
benchmark/: CONTRIBUTING.md  README.md  pyproject.toml
benchmark/docs/benchmarks/: code_generation.md  general_knowledge.md  llm_serving.md  mathematical_reasoning.md  retrieval.md
benchmark/docs/how-to-guide/: how-to-add-benchmark.md
benchmark/examples/: humaneval_qwen2_5_0_5b_instruct_gpu.yaml  humaneval_qwen2_5_0_5b_instruct_rngd.yaml  math_qwen2_5_0_5b_instruct_gpu.yaml  math_qwen2_5_0_5b_instruct_rngd.yaml  mbpp_qwen2_5_0_5b_instruct_gpu.yaml  mbpp_qwen2_5_0_5b_instruct_rngd.yaml  mgsm_qwen2_5_0_5b_instruct_gpu.yaml  mgsm_qwen2_5_0_5b_instruct_rngd.yaml  mmlu_pro_llama_qwen2_5_0_5b_instruct_gpu.yaml  mmlu_pro_llama_qwen2_5_0_5b_instruct_rngd.yaml  mteb_qwen3_embedding_8b_gpu.yaml  mteb_qwen3_embedding_8b_rngd.yaml  mteb_qwen3_reranker_8b_gpu.yaml  mteb_qwen3_reranker_8b_rngd.yaml  online_qwen2_5_0_5b_instruct_gpu.yaml  online_qwen2_5_0_5b_instruct_rngd.yaml
benchmark/furiosa-bench/furiosa_bench/: __init__.py  api.py  cli.py  manager.py
benchmark/furiosa-bench/furiosa_bench/core/: builder.py  detector.py  executor.py  monitor.py  runner.py  server_manager.py
benchmark/furiosa-bench/furiosa_bench/metadata/benchmark/: tasks.yaml
benchmark/furiosa-bench/furiosa_bench/metadata/benchmark/scripts/: install_evalplus.sh  install_lm_eval_harness.sh  install_mteb.sh  install_simple_evals.sh  install_vllm.sh
benchmark/furiosa-bench/furiosa_bench/metadata/deployment/: dryrun.yaml  furiosa-llm.yaml  vllm.yaml
benchmark/furiosa-bench/furiosa_bench/utils/: analyzer.py  logger.py
benchmark/tests/: __init__.py  test_integration.py
benchmark/tests/fixtures/: dryrun_experiment.yaml
chat-playground/: README.md  build.sh
chat-playground/backend/: main.py  pyproject.toml  requirements.txt
chat-playground/backend/static/: index.html
chat-playground/frontend/: index.html  package-lock.json  package.json  vite.config.js
chat-playground/frontend/src/: App.css  App.jsx  ChatRenderer.jsx  ComponentSelector.jsx  ControlPanel.jsx  InfoPanel.jsx  MeterComponent.jsx
coding-agent/: README.md
coding-agent/opencode/: README.md  furiosa-opencode.py  opencode.sh
coding-agent/unit-test-generator/: README.md  app.py  requirements.txt  web_app.py
coding-agent/unit-test-generator/examples/: calculator.py  polynomial.py
llm-assistant/: README.md
llm-assistant/financial-analysis/: README.md  build.sh
llm-assistant/financial-analysis/backend/: main.py  pyproject.toml  requirements.txt
llm-assistant/financial-analysis/frontend/: build.sh  index.html  package-lock.json  (+2 more)
llm-assistant/openclaw/: README.md  setup.py  setup.sh
llm-assistant/weekly-news-reporter/: README.md  app.ipynb  app.py  response.json
rag/: README.md
rag/kotaemon/: README.md
(+12 files in other folders)
